# bot_discord

./: .env.example  .gitignore  DEEPSEEK_SETUP.md  Dockerfile  Dockerfile.uv  MIGRATION_STATUS.md  MODERNIZATION_2025.md  README.md  SYSTEM_METRICS_DESIGN.md  UV_WORKFLOW.md  build_rust.py  docker-compose.uv.yml  docker-compose.yml  migrate_to_uv.py  pyproject.toml  pyproject.toml.new  pyproject.toml.uv  pythonbot.py
acciones/: abrazo.py  adivina.py  alcohol.py  ayuda.py  cafe.py  chistes.py  encuesta.py  evento.py  frases.py  gracias.py  hola.py  info.py  llama.py  oyente.py  palabras_clave.py  registrarse.py  system_metrics_rust.py  tateti.py  traductor.py  vigilante.py  youtube.py
acciones/aventura/: __init__.py  cueva.py  montania.py  rio.py  selva.py
base/: database.py
cogs/: coamando_tateti.py  comando_abrazo.py  comando_adivina.py  comando_alcohol.py  comando_aventura.py  comando_ayuda.py  comando_cafe.py  comando_chistes.py  comando_clave.py  comando_encuesta.py  comando_evento.py  comando_frases.py  comando_gemini.py  comando_gracias.py  comando_hola.py  comando_info.py  comando_llama.py  comando_oyente.py  comando_register.py  comando_tateti.py  comando_traductor.py  comando_vigilante.py  comando_youtube.py
config/: avent_config.py  ia_config.py  lla_config.py
database/: modelos.py
nginx/: nginx.config
system_monitor/: Cargo.toml
system_monitor/src/: main.rs
