[tool.poetry]
name = "bot"
version = "0.1.0"
description = "bot de python con base de datos postgres y todo montado en docker"
authors = ["Ponce1969 <gompatri@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
PyNaCl = "^1.5.0"
typing_extensions = "^4.12.2"
yarl = "^1.9.4"
pycparser = "^2.22"
multidict = "^6.0.5"
idna = "^3.7"
greenlet = "^3.0.3"
cffi = "^1.16.0"
attrs = "^23.2.0"
async-timeout = "^4.0.3"
aiosignal = "^1.3.1"
aiohttp = "^3.9.5"
translate = "^3.6.1"
google-api-python-client = "^2.138.0"
pytz = "^2024.1"
google-generativeai = "^0.7.2"
groq = "^0.9.0"
langchain-community = "^0.2.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
