[package]
name = "system_monitor"
version = "1.0.0"
edition = "2021"
authors = ["Ponce1969 <gompatri@gmail.com>"]
description = "Sistema de métricas avanzado para OrangePi 5 Plus - Integración Python + Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Para métricas del sistema
sysinfo = "0.30"
procfs = "0.16"

# Para networking
reqwest = { version = "0.11", features = ["json"] }

# Para I/O async
tokio-fs = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "system_monitor"
path = "src/main.rs"